--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,7 +26,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 body.dark {
       /* Fondos */
-  --bg-page: #121212;
+  --bg-page: #0f172a;
   --bg-card: #182442;
   
     /* Textos */
